quick fix so styles are not responsive with mobile view

--- a/client/src/components/RecipeModal/style.module.css
+++ b/client/src/components/RecipeModal/style.module.css
@@ -58,6 +58,46 @@
   border-radius: 1%;
 }
 
+.header {
+  max-width: 80%;
+}
+
 .divider {
   color: crimson;
+}
+
+@media only screen and (max-width: 500px) {
+  .modal {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    z-index: 1100;
+    background: #f9fbff;
+    border: none;
+    border-radius: 2%;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+      rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    overflow-y: scroll;
+    overflow-style: unset;
+    -ms-overflow-style: none;
+    margin-left: unset;
+    margin-top: unset;
+    top: unset;
+    bottom: unset;
+  }
+
+  .header {
+    max-width: 72%;
+  }
+
+  .close_button {
+    border: 0px solid crimson;
+    border-radius: 50%;
+    cursor: none;
+    outline: none;
+  }
+
+  .close_button.svg {
+    display: none;
+  }
 }
